changed spores.getlast() to spores.get(spores.size() -1) to avoid conflict